--- a/package.json
+++ b/package.json
@@ -34,5 +34,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Music app",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Marionwanyama23/music-app-frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Marionwanyama23/music-app-frontend/issues"
+  },
+  "homepage": "https://github.com/Marionwanyama23/music-app-frontend#readme"
 }
